# slack-rs-api

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
auth/: Cargo.toml
auth/src/: lib.rs
bots/: Cargo.toml
bots/src/: lib.rs
channels/: Cargo.toml
channels/src/: lib.rs
chat/: Cargo.toml
chat/src/: lib.rs
codegen/src/: generator.rs  main.rs
examples/: channel_history.rs  start_rtm.rs
requests/: Cargo.toml
requests/src/: lib.rs
src/: id.rs  lib.rs  requests.rs  rtm.rs  timestamp.rs  types.rs
src/http/: channels.rs  conversations.rs  mod.rs  search.rs  team.rs  users.rs
src/mods/: api.rs  auth.rs  bots.rs  channels.rs  chat.rs  conversations.rs  dnd.rs  emoji.rs  files.rs  files_comments.rs  groups.rs  im.rs  mod.rs  mpim.rs  oauth.rs  pins.rs  reactions.rs  reminders.rs  rtm.rs  search.rs  stars.rs  team.rs  team_profile.rs  usergroups.rs  usergroups_users.rs  users.rs  users_profile.rs
src/rtm/: event.rs  message.rs  mod.rs
types/: Cargo.toml
types/src/: lib.rs
