[package]
authors = ["Benjamin Elder <ben.the.elder@gmail.com>", "Matt Jones <mthjones@gmail.com>"]
description = "Interface for the Slack Web API"
documentation = "https://docs.rs/slack_api"
license = "Apache-2.0"
name = "slack_api"
repository = "https://github.com/slack-rs/slack-rs-api.git"
version = "0.19.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"
reqwest = "0.8"
uuid = { version = "0.6", features = ["serde", "v4"] }
chrono = "0.4"
derive-new = "0.5"
lazy_static = "1.0"

[dev-dependencies]
openssl-probe = "*"
criterion = "0.2"

[[bench]]
name = "id"
harness = false

[[bench]]
name = "history"
harness = false

