[package]
authors = ["Benjamin Elder <ben.the.elder@gmail.com>", "Matt Jones <mthjones@gmail.com>"]
description = "Interface for the Slack Web API"
documentation = "https://docs.rs/slack_api"
license = "Apache-2.0"
name = "slack_api"
repository = "https://github.com/slack-rs/slack-rs-api.git"
version = "0.19.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"
uuid = { version = "0.7", features = ["serde", "v4"] }
derive-new = "0.5"
chrono = { version = "0.4", optional = true }
reqwest = { version = "0.9", optional = true }

[dev-dependencies]
openssl-probe = "0.1"
lazy_static = "1.0"
openssl = { version = "0.10", features = ["vendored"] }

[[example]]
name = "start_rtm"
required-features = ["reqwest"]

[[example]]
name = "channel_history"
required-features = ["reqwest"]

