[package]
authors = ["Benjamin Elder <ben.the.elder@gmail.com>", "Matt Jones <mthjones@gmail.com>"]
description = "Interface for the Slack Web API"
documentation = "https://docs.rs/slack_api"
license = "Apache-2.0"
name = "requests"
repository = "https://github.com/slack-rs/slack-rs-api.git"
version = "0.19.0"

[dependencies]
serde = "1.0"
serde_qs = "0.4"
reqwest = "0.8"
